--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.PublicRepository"
         tools:targetApi="31">
         <activity
+            android:name=".View.MediaPlayer.MediaPlayer"
+            android:exported="false" />
+        <activity
             android:name=".View.Reply.ReplyActivity"
             android:exported="false" />
         <activity
